# mcfd

./: .gitignore  CMakeLists.txt  KeccakF-1600-compat.c  KeccakF-1600-interface.h  KeccakF-1600.c  KeccakF-1600.h  KeccakNISTInterface.c  KeccakPad_10_1.c  KeccakPad_10_1.h  Makefile  README.md  TODO  common.c  common.h  crypto_helpers.c  crypto_helpers.h  duplex.c  duplex.h  genKAT.c  keccak_rng.c  main.c  mcfd_auth.c  mcfd_auth.h  mcfd_common.c  mcfd_common.h  mcfd_crypto.c  mcfd_crypto.h  mcfd_main.c  mcfd_net.c  mcfd_net.h  pad.h  permutation.h  sponge.c  sponge.h  spongeprg.c  spongeprg.h  spongewrap.c  spongewrap.h  testDuplex.c  testSpongeWrap.c
include/: CMakeLists.txt
include/common/: CMakeLists.txt  crypto_helpers.h
include/curve25519/: CMakeLists.txt  curve25519.h
include/mcfd/: CMakeLists.txt  mcfd_auth.h  mcfd_cipher.h  mcfd_config.h.in  mcfd_kdf.h
include/spongecrypt/: CMakeLists.txt  construction.h  crypto_helpers.h  duplex.h  pad.h  permutation.h  sponge.h  spongeprg.h  spongewrap.h
include/spongecrypt/keccak/: CMakeLists.txt  KeccakF-1600.h  KeccakPad_10_1.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  crypto_helpers.c
src/curve25519/: CMakeLists.txt  curve25519.c
src/mcfd/: CMakeLists.txt  mcfd_auth.c  mcfd_auth.h  mcfd_cipher.c  mcfd_cipher_nacl.c  mcfd_cipher_sodium.c  mcfd_common.c  mcfd_common.h  mcfd_crypto.c  mcfd_crypto.h  mcfd_kdf.c  mcfd_kdf.h  mcfd_kdf_nacl.c  mcfd_kdf_sodium.c  mcfd_main.c  mcfd_net.c  mcfd_net.h  mcfd_random.c  mcfd_random.h  mcfd_seccomp.c  mcfd_seccomp.h
src/misc/: CMakeLists.txt  keccak_rng.c
src/spongecrypt/: CMakeLists.txt  duplex.c  sponge.c  spongeprg.c  spongewrap.c
src/spongecrypt/keccak/: CMakeLists.txt  KeccakF-1600-compat.c  KeccakF-1600.c  KeccakPad_10_1.c
tests/: CMakeLists.txt  test_end_to_end.sh  test_end_to_end_reversed.sh
tests/src/: CMakeLists.txt  KeccakNISTInterface.c  KeccakNISTInterface.h  assert.h  genKAT.c  libc_wrappers.c  libc_wrappers.h  main.c  testDuplex.c  testSpongePRG.c  testSpongeWrap.c  test_unit_crypto_common.c  test_unit_duplex.c  test_unit_keccak.c  test_unit_main.c  test_unit_mcfd_auth.c  test_unit_mcfd_cipher.c  test_unit_mcfd_kdf.c  test_unit_sponge.c  test_unit_spongeprg.c  test_unit_spongewrap.c
