get_property (H_CRYPTO_COMMON GLOBAL PROPERTY H_CRYPTO_COMMON)

set (H_CONSTR_COMMON
	"${CMAKE_CURRENT_SOURCE_DIR}/construction.h")

set (H_SPONGE_COMMON
	"${CMAKE_CURRENT_SOURCE_DIR}/permutation.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/pad.h")

add_subdirectory (keccak)

set_property (GLOBAL APPEND PROPERTY H_SPONGE
	"${H_CRYPTO_COMMON}"
	"${H_SPONGE_COMMON}"
	"${H_CONSTR_COMMON}"
	"${CMAKE_CURRENT_SOURCE_DIR}/sponge.h")

set (H_DUPLEX
	"${H_CRYPTO_COMMON}"
	"${H_SPONGE_COMMON}"
	"${H_CONSTR_COMMON}"
	"${CMAKE_CURRENT_SOURCE_DIR}/duplex.h")
set_property (GLOBAL APPEND PROPERTY H_DUPLEX
	${H_DUPLEX})

set_property (GLOBAL APPEND PROPERTY H_SPONGEWRAP
	"${H_CRYPTO_COMMON}"
	"${H_SPONGE_COMMON}"
	"${H_CONSTR_COMMON}"
	"${CMAKE_CURRENT_SOURCE_DIR}/spongewrap.h")

set_property (GLOBAL APPEND PROPERTY H_SPONGEPRG
	"${H_DUPLEX}"
	"${CMAKE_CURRENT_SOURCE_DIR}/spongeprg.h")
